--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@ menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
     <string name="gender_invalid">Pilih jenis kelamin.</string>
     <string name="reset">Reset</string>
     <string name="judul_kurus">Mengatasi Kekurusan</string>
-    <string name="judul_ideal">Menjaga Tetap Ideal</string>
+    <string name="judul_ideal">Menjaga Tetap Ideal guys</string>
     <string name="judul_gemuk">Mengatasi Kegemukan</string>
     <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger
 berukuran raksasa ini.</string>
